<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/element_spacing_large"
        android:padding="@dimen/big_full_screen_padding"
        android:divider="@drawable/layout_divider_ver_small"
        android:showDividers="middle"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/element_spacing_medium"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/josefin_slab"
                android:textSize="@dimen/app_title"
                android:textColor="@color/color_text_light"
                android:text="@string/app_name"/>

            <ImageView
                android:layout_width="@dimen/icon_big"
                android:layout_height="@dimen/icon_big"
                android:tint="@color/color_text_light"
                android:src="@drawable/app_logo"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:fontFamily="@font/josefin_sans"
            android:textSize="@dimen/font_medium"
            android:textColor="@color/color_text_light"
            android:text="@string/email_label"/>

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_medium"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/josefin_sans"
            android:textColor="@color/color_text"
            android:backgroundTint="@color/color_text_light"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:fontFamily="@font/josefin_sans"
            android:textSize="@dimen/font_medium"
            android:textColor="@color/color_text_light"
            android:text="@string/password_label"/>

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_medium"
            android:inputType="textPassword"
            android:fontFamily="@font/josefin_sans"
            android:textColor="@color/color_text"
            android:backgroundTint="@color/color_text_light"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/login_error_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/design_default_color_error"
                android:textSize="@dimen/font_small"
                android:text="@string/login_error"
                android:visibility="invisible"/>
            <TextView
                android:id="@+id/forgot_password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/color_text_light"
                android:textSize="@dimen/font_small"
                android:text="@string/forgot_password_text"/>
        </LinearLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/element_spacing_medium"
            android:textAllCaps="false"
            android:fontFamily="@font/josefin_sans"
            android:textColor="@color/color_text"
            android:text="@string/sign_in_button"
            android:background="@drawable/ripple_button_long"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/element_spacing_small"
                android:fontFamily="@font/josefin_slab"
                android:text="@string/dont_have_account_text"/>

                <TextView
                    android:id="@+id/register_text_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/josefin_slab_bold"
                    android:text="@string/sign_up_here_text" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="@dimen/element_spacing_medium"
            android:background="@color/color_text_light"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/facebook_login_button"
                android:layout_width="@dimen/icon_medium"
                android:layout_height="@dimen/icon_medium"
                android:layout_marginRight="@dimen/element_spacing_big"
                android:background="@drawable/ic_fb"/>
            <Button
                android:id="@+id/gmail_login_button"
                android:layout_width="@dimen/icon_medium"
                android:layout_height="@dimen/icon_medium"
                android:background="@drawable/ic_mail"/>
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading_bar"
        android:layout_width="@dimen/icon_medium"
        android:layout_height="@dimen/icon_medium"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>
</RelativeLayout>