<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_full_screen_padding"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_big"
            android:fontFamily="@font/josefin_sans_bold"
            android:text="@string/add_to_label"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginVertical="@dimen/element_spacing_small">
            <ListView
                android:id="@+id/wishlist_selection_list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/list_empty_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/element_spacing_small"
                android:layout_centerInParent="true"
                android:textSize="@dimen/font_medium"
                android:fontFamily="@font/josefin_slab"
                android:visibility="invisible"
                android:text="@string/empty_wishlist_message"/>
        </RelativeLayout>
        <Button
            android:id="@+id/done_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/element_spacing_big"
            android:layout_marginBottom="@dimen/element_spacing_super_small"
            android:textAllCaps="false"
            android:text="@string/done_button_label"
            android:background="@drawable/ripple_button_long_light"
            />
    </LinearLayout>
</ScrollView>